--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,9 +45,9 @@
     "react-meta-tags": "^1.0.1",
     "react-number-format": "^4.9.1",
     "react-paginate": "^8.1.1",
-    "react-player": "^2.9.0",
+    "react-player": "^2.11.0",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "^4.0.1",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.1",
@@ -58,6 +58,7 @@
     "styled-components": "^5.3.0",
     "swiper": "^6.6.1",
     "typescript": "^4.3.2",
+    "video-react": "^0.16.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
