--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-platform-demo-frontend",
+  "name": "app-ezinvoice-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +17,7 @@
     "ajv": "^6.12.3",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.0",
+    "bootstrap": "^5.2.3",
     "canvas-confetti": "^1.3.3",
     "cids": "^1.0.0",
     "date-fns": "^2.21.3",
@@ -31,7 +32,7 @@
     "node-fetch": "^2.6.1",
     "qs": "^6.9.4",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.7.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countdown": "^2.3.2",
     "react-countup": "^4.3.3",
@@ -48,7 +49,7 @@
     "react-player": "^2.11.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.1",
     "react-window": "^1.8.6",
@@ -69,10 +70,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
@@ -98,7 +96,7 @@
     "@types/react-transition-group": "^4.4.1",
     "@types/simplemde": "^1.11.7",
     "eslint": "^7.26.0",
-    "husky": "4.3.5",
+    "husky": "^4.3.8",
     "prettier": "^2.3.0",
     "react-hook-form": "^7.38.0",
     "source-map-explorer": "^2.5.2",
