--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,4 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           cd ez-invoice/deploy
-          sudo bash dev.sh
+          bash dev.sh
