integrate login logout api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "easymde": "^2.15.0",
     "framer-motion": "^8.5.4",
     "history": "4.10.1",
+    "i18next": "^22.4.9",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "multicodec": "^2.0.0",
@@ -42,6 +43,7 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.9",
+    "react-i18next": "^12.1.5",
     "react-markdown": "^6.0.2",
     "react-meta-tags": "^1.0.1",
     "react-number-format": "^4.9.1",
