--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,15 @@
     "express-session": "^1.17.2",
     "mongodb": "^4.0.0",
     "mongoose": "^6.9.0",
-    "morgan": "^1.10.0"
+    "moralis": "^2.13.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.11",
     "@types/express": "^4.17.12",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
