--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,7 @@ PI_API_KEY=todo_developer_portal
 SESSION_SECRET=abcd1324_TODO
 
 # MongoDB database connection details:
-MONGODB_DATABASE_NAME=demoapp
-MONGODB_USERNAME=demoapp
-MONGODB_PASSWORD=abcd1234
+MONGOD_URI=uri
 
 
 # This will be prepended to all container names.
