--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,12 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
+          ssh-add .ssh/github-deploy-key
           cd ez-invoice
 
           git restore .
           git checkout dev
           git pull
 
-          sudo docker-compose build
-          sudo docker-compose up -d
+          sudo docker-compose down
+          sudo docker-compose up -d --no-deps --build
