--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/connect-mongo": "^3.1.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express-session": "^1.17.5",
+    "aws-sdk": "^2.1312.0",
     "axios": "^0.21.1",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
@@ -22,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "mailcomposer": "^4.0.2",
     "mongodb": "^4.0.0",
     "mongoose": "^6.9.0",
     "moralis": "^2.13.0",
