--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@lottiefiles/react-lottie-player": "^3.4.2",
     "@phamphu19498/pibridge_uikit": "^1.0.2",
     "@reduxjs/toolkit": "^1.5.0",
@@ -35,6 +36,7 @@
     "node-fetch": "^2.6.1",
     "qs": "^6.9.4",
     "react": "^17.0.2",
+    "react-auto-translate": "^0.0.6",
     "react-bootstrap": "^2.7.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countdown": "^2.3.2",
