--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
+        command_timeout: "30m"
         script: |
           eval "$(ssh-agent -s)"
           ssh-add .ssh/github-deploy-key
@@ -25,3 +26,4 @@ jobs:
 
           sudo docker-compose down
           sudo docker-compose up -d --no-deps --build
+          sudo docker system prune
