--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
 
           sudo docker-compose down
           sudo docker-compose up -d --no-deps --build
-          sudo docker system prune
+          sudo docker system prune -f
