--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-feather": "^2.0.8",
+    "react-google-translate": "^1.0.12",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.9",
     "react-i18next": "^12.1.5",
