--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - dev
+      
+concurrency: 
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
+  
 jobs:
   build:
     name: Build
