Update example env

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,17 @@ DATA_DIRECTORY=./docker-data
 
 # URL of the Pi Platform API - you should not need to change this.
 PLATFORM_API_URL=https://api.minepi.com
+
+MORALIS_API_KEY=
+
+#AWS
+AWS_REGION=
+AWS_SES_ID=
+AWS_SES_SECRET=
+
+# Payment Gateway
+PAYMENT_GATEWAY_URL=
+PAYMENT_URL=
+
+# Google API Key
+GOOGLE_API_KEY=
