--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,14 +4,25 @@ SESSION_SECRET=
 # Get this on the Pi Developer Portal (develop.pi in the Pi Browser)
 PI_API_KEY=
 
-# Platform API 
+# Platform API
 PLATFORM_API_URL=https://api.minepi.com
 
 # MongoDB database connection details:
-MONGO_HOST=localhost:27017
-MONGODB_DATABASE_NAME=demoapp-development
-MONGODB_USERNAME=demoapp
-MONGODB_PASSWORD=dev_password
+MONGO_URI=
 
 # Frontend app URL
 FRONTEND_URL=http://localhost:3314
+
+MORALIS_API_KEY=
+
+#AWS
+AWS_REGION=
+AWS_SES_ID=
+AWS_SES_SECRET=
+
+# Payment Gateway
+PAYMENT_GATEWAY_URL=
+PAYMENT_URL=
+
+# Google API Key
+GOOGLE_API_KEY=
