--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,13 @@ services:
       PLATFORM_API_URL: ${PLATFORM_API_URL}
       MONGO_URI: ${MONGO_URI}
       FRONTEND_URL: ${FRONTEND_URL}
+      MORALIS_API_KEY: ${MORALIS_API_KEY}
+      AWS_REGION: ${AWS_REGION}
+      AWS_SES_ID: ${AWS_SES_ID}
+      AWS_SES_SECRET: ${AWS_SES_SECRET}
+      PAYMENT_GATEWAY_URL: ${PAYMENT_GATEWAY_URL}
+      PAYMENT_URL: ${PAYMENT_URL}
+      GOOGLE_API_KEY: ${GOOGLE_API_KEY}
 
   # mongo:
   #   image: mongo:5.0
