--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ FRONTEND_DOMAIN_NAME=frontend.example.com
 BACKEND_URL=https://backend.example.com
 BACKEND_DOMAIN_NAME=backend.example.com
 
+# API Key for Google
+APIKEY_GOOGLE=key
 
 # Obtain the following 2 values on the Pi Developer Portal (open develop.pi in the Pi Browser).
 
