--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
+    "pdfkit": "^0.13.0",
     "puppeteer": "^19.6.3"
   },
   "devDependencies": {
