--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.13.0",
+    "pi-backend": "^0.1.3",
     "puppeteer": "^19.6.3"
   },
   "devDependencies": {
