Add seed pi env

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,12 @@ APIKEY_GOOGLE=key
 
 # Domain validation key:
 DOMAIN_VALIDATION_KEY=todo_developer_portal
+
 # Pi Platform API Key:
 PI_API_KEY=todo_developer_portal
+
+# Pi network seed
+SEED_PI=seed-key
 
 # Generate a random string, or roll your face on the keyboard to fill this value:
 SESSION_SECRET=abcd1324_TODO
