--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,9 @@ SESSION_SECRET=
 # Get this on the Pi Developer Portal (develop.pi in the Pi Browser)
 PI_API_KEY=
 
+# Pi network seed
+SEED_PI=seed-key
+
 # Platform API
 PLATFORM_API_URL=https://api.minepi.com
 
