--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/connect-mongo": "^3.1.3",
     "@types/cookie-parser": "^1.4.2",
+    "@types/eventsource": "1.1.10",
     "@types/express-session": "^1.17.5",
     "aws-sdk": "^2.1312.0",
     "axios": "^0.21.1",
@@ -32,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.13.0",
+    "pi-backend": "^0.1.3",
     "puppeteer": "^19.6.3"
   },
   "devDependencies": {
